<resources>
    <string name="app_name">UHP</string>

    <!-- Error Messages -->
    <string name="image_capture_failed">Image capture failed</string>
    <string name="image_failed_to_save">Image failed to save</string>
    <string name="name_validation_error">Name cannot be blank.</string>
    <string name="card_id_validation_error">
        Invalid card ID. ID must be 3 letters followed by 6 numbers.
    </string>
    <string name="phone_number_validation_error">
        Invalid phone number. Phone number must be blank, a 9 digit number, or a 10 digit number starting with 0.
    </string>
    <string name="invalid_member_id">Could not find member with the provided ID.</string>
    <string name="birthdate_validation_error">Invalid birthdate.</string>
    <string name="gender_validation_error">Must select a gender.</string>

    <!-- Confirmation Messages -->
    <string name="exit_edit_member_form_message">You will lose any information about this member.</string>
    <string name="exit_form_alert">Are you sure you want to exit?</string>

    <!-- Menu -->
    <string name="menu_dismiss_member">Dismiss member</string>
    <string name="menu_member_edit_label">Edit member</string>
    <string name="menu_enroll_number_label">Enroll newborn</string>
    <string name="menu_submit_without_copayment">Submit (no copayment)</string>

    <!-- General Labels -->
    <string name="name_label">Name</string>
    <string name="card_id_label">Card ID</string>
    <string name="phone_number_label">Phone number</string>
    <string name="birthdate_label">Birthdate</string>
    <string name="date_label">Date</string>
    <string name="time_label">Time</string>
    <string name="scan_card_btn_label">Scan new card</string>
    <string name="photo_btn_label">Take photo</string>
    <string name="photo_description">Photo</string>
    <string name="price_with_currency">%1$s UGX</string>
    <string name="gender_label">Gender</string>
    <string name="save_btn_label">Save</string>
    <string name="discard">Discard</string>
    <string name="done">Done</string>

    <!-- Form -->
    <string name="notes_panel_header_text">Flag</string>
    <string name="biometrics_panel_header_text">Photo &amp; Fingerprints</string>
    <string name="member_card_panel_header_text">Member Card</string>
    <string name="member_panel_header_text">Member</string>
    <string name="photo_field_label">Photo</string>
    <string name="missing_information_panel_header_text">Missing Information</string>
    <string name="birthdate_field_label">Birthdate</string>
    <string name="age_dialog_title">Age</string>
    <string name="birthdate_dialog_title">Birthdate</string>
    <string name="toggle_date_input">Enter birthdate?</string>
    <string name="birthdate_day_error">Day cannot be blank</string>
    <string name="birthdate_month_error">Month cannot be blank</string>
    <string name="birthdate_year_error">Year cannot be blank</string>
    <string name="toggle_age_input">Enter age?</string>
    <string name="day_label">Day</string>
    <string name="month_label">Month</string>
    <string name="year_label">Year</string>
    <string name="invalid_date_error_message">Invalid date</string>
    <string name="take_photo_button_text">Take photo</string>
    <string name="fingerprints_age_requirement_message">Fingerprint scans are only for members older than 6 years.</string>
    <string name="fingerprints_field_label">Fingerprints</string>
    <string name="scan_fingerprints_button_text">Scan fingerprints</string>
    <string name="fingerprints_success_message">Fingerprints captured</string>
    <string name="complete_enrollment">Complete Enrollment</string>
    <string name="fingerprints_error_message">There was an error and fingerprints will not be able to be scanned for any members. Please contact the Watsi team to fix this.</string>
    <string name="fingerprints_not_installed_error_message">Could not find the Simprints app. Check that it is installed before continuing.</string>
    <string name="member_card_field_label">Member Card</string>
    <string name="scan_member_card_button_text">@string/scan_member_card</string>
    <string-array name="age_units">
        <item>years</item>
        <item>months</item>
    </string-array>
    <string name="member_list_item_gender_age">%1$s, %2$s</string>
    <string name="name_field_label">Full Name</string>
    <string name="phone_number_field_label">Phone Number (optional)</string>
    <string name="preferred_language_field_label">Preferred Language</string>
    <string name="edit_input_add">Add</string>
    <string name="edit_input_edit">Edit</string>

    <!-- StatusFragment -->
    <string name="sync_encounter_forms_label">Treatment Forms</string>
    <string name="fetch_members_label">Members updated at</string>
    <string name="fetch_member_pictures_label">Member photos</string>
    <string name="sync_edited_members_label">Edited members</string>
    <string name="sync_id_events_label">Identifications</string>

    <!-- EncounterFormFragment -->
    <string name="encounter_form_fragment_label">Treatment form photos</string>
    <string name="encounter_form_add_photo_btn">Add photo</string>
    <plurals name="encounter_form_count">
        <item quantity="one">%d treatment form photo</item>
        <item quantity="other">%d treatment form photos</item>
    </plurals>

    <!-- AddNewBillableFragment -->
    <string name="add_new_billable_fragment_label">New line item</string>
    <string name="add_new_billable_type_label">Type</string>
    <string name="add_new_billable_name_label">Name</string>
    <string name="add_new_billable_price_label">Price per Unit</string>
    <string name="add_new_billable_unit_label">Unit (eg. 100mg)</string>
    <string name="add_new_billable_composition_label">Composition (eg. tablet)</string>
    <string name="add_new_billable_composition_prompt">Select a composition</string>
    <string name="add_new_billable">Add</string>

    <!-- CurrentPatientsFragment -->
    <string name="current_patients_fragment_label">Checked in members</string>
    <string name="identification_button">Look up member</string>
    <string name="current_patients_empty_text">There are no checked-in members.</string>
    <plurals name="current_patients_label" >
        <item quantity="one">%d Current Member</item>
        <item quantity="other">%d Current Members</item>
    </plurals>

    <!-- QrCodeActivity -->
    <string name="search_member_hint">Search member name or ID&#8230;</string>
    <string name="scan_member_card">Scan member card</string>

    <!-- SearchMemberFragment -->
    <string name="member_no_search_results_text">No search results. Please try again.</string>

    <!-- PresentingConditionsFragment -->
    <string name="fragment_presenting_conditions">Enter presenting conditions</string>

    <!-- CheckinMemberDetailFragment -->
    <string name="detail_fragment_label">Member</string>
    <string name="absentee_notification">Needs to complete enrollment</string>
    <string name="absentee_action">Enroll</string>
    <string name="replace_card_notification">Needs new member card</string>
    <string name="replace_card_action">Issue</string>
    <string name="check_in">Check In</string>
    <string name="checked_in">Already Checked In</string>
    <string name="identification_approved">has been successfully checked in.</string>
    <string name="household_panel_header">Household</string>
    <string name="empty_household_list">No other household members</string>
    <plurals name="household_members_label" >
        <item quantity="one">%d member</item>
        <item quantity="other">%d members</item>
    </plurals>
    <string name="checked_in_snackbar_message">%1$s was checked in.</string>

    <string name="fingerprint_scan_btn">Verify Fingerprints</string>
    <string name="fingerprint_scan_failed">Fingerprints could not be scanned. Contact your administrator for help.</string>
    <string name="good_scan_indicator">Good Fingerprint Match</string>
    <string name="bad_scan_indicator">Fingerprint Mismatch</string>
    <string name="fingerprints_missing_no_verify">No fingerprint scans to verify.</string>

    <!-- CurrentMemberDetailFragment -->
    <string name="current_member_fragment_label">Encounter</string>
    <string name="detail_create_encounter">Record Encounter</string>
    <string name="checked_out_snackbar_message">%1$s has been checked out without treatment details.</string>
    <string name="generic_enter_treatment_info_failure">Unable to enter treatment information. Please try again.</string>

    <!-- MemberEditFragment -->
    <string name="member_edit_label">Edit member details</string>
    <string name="member_edit_save">@string/save</string>
    <string name="member_edit_confirmation">Are you sure you wish to edit the member information?</string>

    <!-- ClinicNumberDialogFragment -->
    <string name="clinic_number_save">Complete check in</string>
    <string name="radio_opd">OPD</string>
    <string name="radio_delivery">Delivery</string>
    <string name="clinic_number">Number</string>
    <string name="clinic_number_button">Submit</string>
    <string name="clinic_number_prompt">Enter the member\'s clinic number</string>

    <string name="newborn_error_message">Newborns must be less than 3 months old</string>

    <!-- EnrollNewbornInfoFragment -->
    <string name="enroll_newborn_activity_title">Newborn</string>
    <string name="enrollment_completed_snackbar_message">Newborn successfully enrolled.</string>

    <!-- PhotoActivity -->
    <string name="member_photo_overlay_text">Take photo of member</string>
    <string name="form_photo_overlay_text">Take photo of form</string>

    <!-- MemberListItem -->
    <string name="member_list_item_description">%1$s &#183; %2$s</string>
    <string name="member_list_item_description_checked_in">%1$s &#183; %2$s &#183; %3$s</string>

    <!-- ReceiptFragment -->
    <string name="date_and_time">%1$s at %2$s</string>
    <plurals name="forms_attached_label" >
        <item quantity="one">%d form attached</item>
        <item quantity="other">%d forms attached</item>
    </plurals>
    <string name="currency">UGX</string>

    <!-- EncounterFragment -->
    <string name="add_billable_prompt"><u>Add new item</u></string>

</resources>
