<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:paddingTop="@dimen/dialog_padding"
    android:paddingLeft="@dimen/dialog_padding"
    android:paddingRight="@dimen/dialog_padding" >

    <RadioGroup
        android:id="@+id/radio_group_clinic_number"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:checkedButton="@+id/radio_opd" >
        <RadioButton
            android:id="@+id/radio_opd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/radio_opd" />
        <RadioButton
            android:id="@+id/radio_delivery"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/radio_delivery" />
    </RadioGroup>

    <EditText
        android:id="@+id/clinic_number_field"
        android:hint="@string/clinic_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number" />
</LinearLayout>
