<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/capture_photo_layout"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="@dimen/fragment_vertical_margin"
    android:layout_marginBottom="@dimen/fragment_vertical_margin"
    android:layout_marginLeft="@dimen/fragment_horizontal_margin"
    android:layout_marginRight="@dimen/fragment_horizontal_margin"
    android:focusable="true"
    android:focusableInTouchMode="true" >

    <Button
        android:id="@+id/photo_btn"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:text="@string/photo_btn_label" />

    <ImageView
        android:id="@+id/photo"
        android:contentDescription="@string/photo_description"
        android:layout_height="380dp"
        android:layout_width="wrap_content"
        android:layout_marginTop="@dimen/fragment_vertical_margin"
        android:layout_gravity="center_horizontal"
        android:adjustViewBounds="true" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom">

        <Button
            android:id="@+id/save_button"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:text="@string/save_btn_label" />
    </RelativeLayout>
</LinearLayout>
