<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:custom="http://schemas.android.com/apk/res-auto"
        android:id="@+id/detail_fragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <org.watsi.uhp.custom_components.NotificationBar
            android:id="@+id/replace_card_notification"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            custom:message="@string/replace_card_notification"
            custom:action="@string/replace_card_action" />

        <org.watsi.uhp.custom_components.NotificationBar
            android:id="@+id/absentee_notification"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            custom:message="@string/absentee_notification"
            custom:action="@string/absentee_action" />

        <org.watsi.uhp.views.MemberCard
            android:id="@+id/member_detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <Button
            android:id="@+id/scan_fingerprints_btn"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:theme="@style/PrimaryButton"
            android:text="@string/fingerprint_scan_btn"
            android:drawableStart="@drawable/ic_fingerprints"
            android:layout_marginLeft="@dimen/fragment_horizontal_margin"
            android:layout_marginRight="@dimen/fragment_horizontal_margin"
            android:visibility="gone" />

        <TextView
            android:id="@+id/scan_result"
            android:layout_height="36dp"
            android:layout_width="156dp"
            android:drawableStart="@drawable/ic_fingerprints"
            android:background="@drawable/scan_result_button"
            android:gravity="center"
            android:visibility="gone" />

        <Button
            android:id="@+id/member_action_button"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            style="@style/PrimaryButton"
            android:layout_marginLeft="@dimen/fragment_horizontal_margin"
            android:layout_marginRight="@dimen/fragment_horizontal_margin"
            android:layout_marginBottom="@dimen/fragment_vertical_margin"
            android:visibility="invisible"/>

        <View
            android:id="@+id/detail_fragment_divider"
            android:layout_width="fill_parent"
            android:layout_height="1dip"
            android:background="@color/gray3" />

        <TextView
            android:id="@+id/household_members_label"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/fragment_vertical_margin"
            android:layout_marginBottom="@dimen/text_view_vertical_margin"
            android:layout_marginLeft="@dimen/fragment_horizontal_margin"
            android:layout_marginRight="@dimen/fragment_horizontal_margin" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/household_members_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/space24"
            android:clipToPadding="false"
            android:paddingBottom="80dp"
            android:layout_marginLeft="@dimen/fragment_horizontal_margin"
            android:layout_marginRight="@dimen/fragment_horizontal_margin" />

    </LinearLayout>

</android.support.v4.widget.NestedScrollView>
