<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/fingerprints_container"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/space16"
    android:clipToPadding="false"
    android:clipChildren="false"
    android:background="@drawable/panel_bottom_background">

    <TextView
        android:id="@+id/fingerprints_section_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/fingerprints_field_label"
        style="@style/Label" />

    <org.watsi.uhp.views.ButtonWithPreview
        android:id="@+id/fingerprints_button_with_preview"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_marginTop="@dimen/space8"
        android:clipToPadding="false"
        android:clipChildren="false"
        app:buttonText="@string/scan_fingerprints_button_text"
        app:icon="@drawable/ic_fingerprint_black_24dp"
        app:layout_constraintTop_toBottomOf="@id/fingerprints_section_label" />

    <TextView
        android:id="@+id/fingerprints_disabled_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space8"
        android:text="@string/fingerprints_age_requirement_message"
        android:textColor="@color/gray6"
        app:layout_constraintTop_toBottomOf="@id/fingerprints_button_with_preview"/>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/fingerprints_error_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space8"
        app:layout_constraintTop_toBottomOf="@id/fingerprints_button_with_preview"/>
</android.support.constraint.ConstraintLayout>
