<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/notification_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/space24"
        android:orientation="vertical"
        android:visibility="gone"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <org.watsi.uhp.views.NotificationBar
            android:id="@+id/replace_card_notification"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            custom:message="@string/replace_card_notification"
            custom:action="@string/replace_card_action" />

        <org.watsi.uhp.views.NotificationBar
            android:id="@+id/absentee_notification"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            custom:message="@string/absentee_notification"
            custom:action="@string/absentee_action" />
    </LinearLayout>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/member_info_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="@dimen/space16"
        android:paddingEnd="@dimen/space16"
        android:paddingTop="@dimen/space16"
        android:paddingBottom="@dimen/space24"
        android:background="@drawable/panel_background"
        app:layout_constraintTop_toBottomOf="@id/notification_container"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <org.watsi.uhp.views.MemberCard
            android:id="@+id/member_detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <Button
            android:id="@+id/member_action_button"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_marginTop="@dimen/space16"
            style="@style/PrimaryButton"
            app:layout_constraintTop_toBottomOf="@id/member_detail"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" />

    </android.support.constraint.ConstraintLayout>
</android.support.constraint.ConstraintLayout>
